# qa_guru_homework16

./: README.md  pyproject.toml
