[tool.poetry]
name = "hw 16"
version = "0.1.0"
description = "qa guru 16 hw"
authors = ["kh4ydarov <kh4ydarovs@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc2"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
